deploy/k8s-lef/traefik/webimap-traefik-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webimap-traefik-rules
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: now-webimap.lefebvre.es
      http:
        paths:
          - path: /
            backend:
              serviceName: webimap
              servicePort: http
          - path: /api
            backend:
              serviceName: webimapserver
              servicePort: http
